[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/MatchTop.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/menu-geral.png" type="Texture" id=2]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/assets/botao-vivos.png" type="Texture" id=5]
[ext_resource path="res://resources/assets/botao-vivos-ativo.png" type="Texture" id=6]
[ext_resource path="res://resources/assets/botao-eliminados.png" type="Texture" id=7]
[ext_resource path="res://resources/assets/botao-eliminados-ativo.png" type="Texture" id=8]
[ext_resource path="res://resources/assets/botao-pausa.png" type="Texture" id=9]
[ext_resource path="res://resources/assets/botao-pausa-ativo.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 4 )

[node name="Top" type="Control"]
anchor_right = 1.0
margin_bottom = 231.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0.431373, 0.431373, 1 )

[node name="BG" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="BG"]
texture = ExtResource( 2 )
centered = false

[node name="TimeDay" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Timer" type="Control" parent="TimeDay"]
margin_left = 25.0
margin_top = 26.0
margin_right = 105.0
margin_bottom = 105.0

[node name="ColorRect" type="ColorRect" parent="TimeDay/Timer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="TimeDay/Timer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -30.5
margin_right = 33.0
margin_bottom = 38.5
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.145098, 0.137255, 0.117647, 1 )
text = "30"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="TimeDay/Timer"]

[node name="Day" type="Control" parent="TimeDay"]
editor/display_folded = true
margin_left = 142.0
margin_top = 8.0
margin_right = 230.0
margin_bottom = 117.0

[node name="ColorRect" type="ColorRect" parent="TimeDay/Day"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="Label" type="Label" parent="TimeDay/Day"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -14.5
margin_right = 20.0
margin_bottom = 14.5
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Dia 1"
align = 1
valign = 1

[node name="CurrentPhase" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -324.0
margin_top = 29.0
margin_right = -98.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Descubra sua classe"
align = 2
valign = 1

[node name="NextPhase" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -331.0
margin_top = 61.0
margin_right = -98.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Noite"
align = 2
valign = 1

[node name="AliveBtn" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_right = -288.0
margin_bottom = 14.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )

[node name="DeadBtn" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.0
margin_top = -72.0
margin_bottom = 14.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 8 )

[node name="PauseBtn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_top = 18.0
margin_right = -5.0
margin_bottom = 105.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 135.0
margin_right = 195.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
text = "Nome"
align = 1
valign = 1
[connection signal="timeout" from="TimeDay/Timer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="AliveBtn" to="." method="_on_AliveBtn_pressed"]
[connection signal="pressed" from="DeadBtn" to="." method="_on_DeadBtn_pressed"]
[connection signal="pressed" from="PauseBtn" to="." method="_on_PauseBtn_pressed"]
